--- a/app/views/v3/schools/confirm-save.html
+++ b/app/views/v3/schools/confirm-save.html
@@ -20,9 +20,9 @@ Save progress
     </div>
     <br>
 
-    <p>Once you receive your email you can access your recommendations page by using the unique link.</p>
+    <p>Once you receive your email you can access your recommendations page by using the unique link provided.</p>
 
-    <p>If you have finished your current session, please close this window.</p>
+    <p>If you have finished your current session, close this window.</p>
 
 
     <p><a href="task-list">Go back to your task list</a></p>
