--- a/app/views/v3/schools/optional.html
+++ b/app/views/v3/schools/optional.html
@@ -114,7 +114,7 @@ Optional information
 
 
         <br>
-      <button class="govuk-button" data-module="govuk-button">Save and continue</button>
+      <button class="govuk-button" data-module="govuk-button">Continue</button>
 
     </form>
 
