--- a/app/views/v3/schools/save-progress.html
+++ b/app/views/v3/schools/save-progress.html
@@ -27,7 +27,7 @@ Save progress
           Email address
         </label>
         <div id="email-hint" class="govuk-hint">
-          We’ll only use this to send your unique link
+          We will only use this to send your unique link
         </div>
         <input class="govuk-input govuk-input--width-20" id="width-20" name="width-20" type="text">
       </div>
