added 'download recommendations' button

--- a/app/views/v3/schools/recommendations-single-section.html
+++ b/app/views/v3/schools/recommendations-single-section.html
@@ -22,6 +22,11 @@ Scores and recommendations
       <a href="task-list">
         Return to category overview</a>
     </p> -->
+    <p> 
+      <a class="govuk-button govuk-button--secondary" href="save-progress">
+        Download your recommendations
+      </a>
+    </p>
     <br>
   </div>
 
