--- a/app/views/v3/schools/recommendations.html
+++ b/app/views/v3/schools/recommendations.html
@@ -25,6 +25,12 @@ Scores and recommendations
       <a href="task-list">
         Return to category overview</a></p> -->
 
+        <p>
+          <a class="govuk-button govuk-button--secondary" href="save-progress">
+            Download your recommendations
+          </a>
+        </p>
+
   </div>
 
 
