--- a/app/views/v3/index.html
+++ b/app/views/v3/index.html
@@ -18,10 +18,10 @@ Review your remote education provision
       {% if serviceName %} {{ serviceName }} {% endif %}
     </h1>
 
-    <p>This service has been provided to help schools and colleges in their remote education provision.</p>
+    <p>This service has been provided to help schools and colleges in England with their remote education provision.</p>
 
     <div class="govuk-inset-text">
-      <p>The answers you provide as part of your review are for the benefit of your school or college only.</p>
+      <!-- <p>The answers you provide as part of your review are for the benefit of your school or college only.</p> -->
       <p>The Department for Education (DfE) will not collect any data that can identify your school or college.</p>
     </div>
 
