--- a/app/views/v3/schools/optional.html
+++ b/app/views/v3/schools/optional.html
@@ -19,8 +19,9 @@ Optional information
     </h1>
 
 
-  <p>In order to identify your specific needs here are some optional questions that will help you get the right support to deliver your remote education framework.</p>
-  <p>If you don't want to complete this you can <a href="task-list">skip to your review framework</a></p>
+  <p>These optional questions will help inform the Department for Education (DfE) with future policy decisions from a national perspective.</p>
+  <p>The DfE will not identify individual providers and your answers will be anonymous.</p>
+  <p>If you do not want to complete this you can <a href="task-list">skip to your review framework</a></p>
   <br>
 
 
