--- a/app/views/v3/before-you-begin.html
+++ b/app/views/v3/before-you-begin.html
@@ -17,8 +17,13 @@ Save progress
       Before you begin
     </h1>
 
-    <p>In order for you to save and return to your framework you will need to enter your email address.</p>
-    <p>You will receive a unique link which you'll use when you return to the service.</p>
+    <p>In order for you to save and return to your framework you will need to:</p>
+
+    <ul class="govuk-list govuk-list--bullet">
+      <li>enter your email address</li>
+      <li>use the unique link that is sent to you</li>
+    </ul>
+
     <p>You only need to submit your email once.</p>
     <br>
 
