--- a/app/views/v3/before-you-begin.html
+++ b/app/views/v3/before-you-begin.html
@@ -17,7 +17,7 @@ Save progress
       Before you begin
     </h1>
 
-    <p>In order for you to save and return to your framework you will need to:</p>
+    <p>In order for you to save and return to your review you will need to:</p>
 
     <ul class="govuk-list govuk-list--bullet">
       <li>enter your email address</li>
