--- a/app/views/v3/confirm-email.html
+++ b/app/views/v3/confirm-email.html
@@ -17,17 +17,12 @@ Save progress
       Email confirmation
     </h1>
 
-    <p>Please confirm your email address.</p>
-    <br>
 
     <form action="confirm-save" method="post" novalidate>
       <div class="govuk-form-group">
         <label class="govuk-label" for="width-20">
-          Email address
+          Please confirm your email address
         </label>
-        <div id="email-hint" class="govuk-hint">
-          We will only use this to send your unique link
-        </div>
         <input class="govuk-input govuk-input--width-20" id="width-200" name="width-200" type="text" value="{{ data['width-20'] }}">
       </div>
       <button type="submit" class="govuk-button" data-module="govuk-button">
