--- a/app/views/v3/schools/recommendations.html
+++ b/app/views/v3/schools/recommendations.html
@@ -21,15 +21,13 @@ Scores and recommendations
 
     <p>Based on the scores you have given so far, you could consider the following recommendations to improve your remote education provision.</p>
 
+    <a class="govuk-button govuk-button--secondary" href="#">
+      Download your recommendations
+    </a>    
+
     <!-- <p>
       <a href="task-list">
         Return to category overview</a></p> -->
-
-        <p>
-          <a class="govuk-button govuk-button--secondary" href="save-progress">
-            Download your recommendations
-          </a>
-        </p>
 
   </div>
 
@@ -52,7 +50,17 @@ Scores and recommendations
           <h3 class="govuk-heading-m">Recommended guidance based on your scores</h3>
 
           <div class="statement-block attention">
-            <h3 class="govuk-heading-s">You scored 2 for remote education plan:</h3>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  <strong>You scored 2 for remote education plan:</strong>
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p>There is a plan in place for remote education and it is clear who is leading it.</p>
+                <p>The plan is underpinned by high expectations to provide the quality delivery of a planned curriculum for all (including vulnerable children and children with SEND), which is aligned as closely as possible to the in-school curriculum.</p>
+              </div>
+            </details>
             <p>The EdTech Demonstrator Programme provides resources to support schools and colleges. This includes <a href="#">short videos</a> developed by schools and colleges on developing remote education plans, and <a href-="#">guidance</a> on
               how
               to embed digital technology.</p>
@@ -62,7 +70,16 @@ Scores and recommendations
           </div>
 
           <div class="statement-block attention">
-            <h3 class="govuk-heading-s">You scored 3 for communication:</h3>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  <strong>You scored 3 for communication:</strong>
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p>Governors, staff, parents and carers are aware of the school's approach and arrangements for remote education.</p>
+              </div>
+            </details>
             <p>Ensure governors, staff, parents and carers are aware of the school’s remote education provision by maintaining regular communication and providing updates on any changes to the provision.</p>
             <p>The Education Endowment Foundation has provided a <a href="#">guide for schools</a> on how to communicate with parents during COVID-19.</p>
           </div>
@@ -72,7 +89,21 @@ Scores and recommendations
 
 
           <div class="statement-block">
-            <h3 class="govuk-heading-s">You scored 4 for monitoring and evaluation:</h3>
+            <details class="govuk-details" data-module="govuk-details">
+              <summary class="govuk-details__summary">
+                <span class="govuk-details__summary-text">
+                  <strong>You scored 4 for monitoring and evaluation:</strong>
+                </span>
+              </summary>
+              <div class="govuk-details__text">
+                <p>The school has systems in place to monitor the impact of remote education. This includes:</p>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>understanding the impact on staff workload and how to mitigate against it</li>
+                  <li>staffing changes</li>
+                  <li>having access to appropriate management information (such as staff and pupil sickness and absence data) to help the school respond to changing contexts</li>
+                </ul>
+              </div>
+            </details>
             <p>GOV.UK provides the following guidance:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li><a href="#">recording attendance in relation to coronavirus (COVID-19) during the 2020 to 2021 academic year</a></li>
@@ -379,6 +410,7 @@ Scores and recommendations
     <a class="govuk-button push-right" href="task-list">
       Continue
     </a>
+
 
 
   </div>
